new additions made

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -5,7 +5,7 @@ $text-color:#eee;
 
 //*Path variables
 
-$main-bgImage-path: "../img/model-1.jpg";
+$main-bgImage-path: "../img/my_profile.jpg.jpg";
 
 $font-family: 'Segoe UI', 'Nunito', Tahoma, Genava, Verdana, sans-serif;
 
